# FreeMD

./: .gitignore  Cargo.toml
src/: articles_display.rs  articles_edit.rs  articles_opinion.rs  auth.rs  db.rs  main.rs  pages.rs  pages_edit.rs  search.rs  upload.rs  user.rs
static/css/: article.css  auth.css  edit.css  style.css  upload.css  user.css
static/js/: article.js
templates/: account_settings.html.hbs  article.html.hbs  editor.html.hbs  index.html.hbs  login.html.hbs  new.html.hbs  register.html.hbs  upload.html.hbs  user.html.hbs
